--- a/src/App.css
+++ b/src/App.css
@@ -89,3 +89,109 @@ margin-top: 20px;
   font-size: 40px;
   margin-bottom: 50px;
 }
+
+.about {
+  background-color: rgb(32, 32, 32);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  color: white;
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  cursor: pointer;
+}
+
+.about-component {
+    background-color: rgb(0, 0, 0, 0.3);
+    position: fixed;  
+    width: 100vw;  
+    height: 100vh;  
+    top: 0;  
+    left: 0;  
+    right: 0;  
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-inner {
+  width: 50vw;
+  height: 70vw;
+  background-color: white;
+  border-radius: 8px;
+}
+
+.close-modal {
+  cursor: pointer;
+  float: right;
+  margin-right: 20px;
+  margin-top: 20px;
+}
+
+.about-text {
+  margin: 0 auto;
+  width: 80%;
+  margin-top: 25%;
+  font-size: 18px;
+}
+
+
+/*BEE ANIMATION LOADER*/
+
+.loader-wrapper {
+  position:absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+}
+
+.loader-bee {
+  position:absolute;
+  margin: auto;
+  height:80px;
+  width:80px;
+  bottom:100px;
+  left: 0;
+  right: 0;
+}
+
+svg {
+  animation: spin 1.5s infinite linear;
+  -webkit-animation: spin 1.5s infinite linear;
+-moz-animation: spin 1.5s infinite linear;
+}
+@keyframes spin {
+  from {
+    -webkit-transform: rotate(360deg);
+  }
+  to {
+    -webkit-transform: rotate(0deg);
+  }
+}
+@-webkit-keyframes spin {
+  from {
+    -webkit-transform: rotate(360deg);
+  }
+  to {
+    -webkit-transform: rotate(0deg);
+  }
+}
+@-moz-keyframes infinite-spinning {
+  from {
+    -moz-transform: rotate(0deg);
+  }
+  to {
+    -moz-transform: rotate(360deg);
+  }
+}
+
+.bee-icon, .circle {
+  fill: #ffffff; 
+}
